# PoixsDesk

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_EN.md  CMakeLists.txt  README.md  README_CN.md  README_EN.md  _config.yml  start_cloud_compture.bat  云电脑平台架构.pptx
PoixsDesk/: CMakeLists.txt  main.cpp  utility.h
Tools/: CMakeLists.txt  PoisxDeskService.cpp  audio.cpp  dxgi.cpp
Win/: CMakeLists.txt  DlgLivePull.cpp  DlgLivePull.h  DlgLivePush.cpp  DlgLivePush.h  DlgVideo.cpp  DlgVideo.h  LiveWin32.cpp  LiveWin32.h  LiveWin32.rc  LiveWin32Dlg.cpp  LiveWin32Dlg.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
libcommon/: CMakeLists.txt  casync_log.cpp  casync_log.h  ccapturer_tracksource.h  cdata_channel.cpp  cdata_channel.h  cdesktop_capture.cpp  cdesktop_capture.h  cinput_device.cpp  cinput_device.h  cinput_device_event.h  client.cpp  client.h  clog.cpp  clog.h  crtc_publisher.cpp  crtc_publisher.h  crtc_stats_logger.cpp  crtc_stats_logger.h  desktop_capture_source.cc  desktop_capture_source.h
libdevice/: CMakeLists.txt
libdevice/window/: device.cpp  device.h  keylayout.h  misc.cpp  misc.h
rtc_app/: rtc_app.sln
rtc_app/rtc_app/: ccapturer_tracksource.h  cdata_channel.cpp  cdata_channel.h  cdesktop_capture.cpp  cdesktop_capture.h  client.h  crtc_publisher.cpp  crtc_publisher.h  cutil.cpp  desktop_capture.cc  desktop_capture.h  desktop_capture_source.cc  desktop_capture_source.h  main.cpp  rtc_app.vcxproj  rtc_app.vcxproj.filters
www/: login.css  login.html  player.css  player.html  stresstest.html
www/scripts/: app.js  stressTest.js  webRtcPlayer.js
