project(PoixsDesk)
cmake_minimum_required(VERSION 2.8)
MESSAGE(STATUS  "####################################")
MESSAGE(STATUS  "#############${PROJECT_NAME}###############")
MESSAGE(STATUS  "####################################")



 
set(CMAKE_CXX_STANDARD 17)  # 指定C++17标准
set(CMAKE_CXX_STANDARD_REQUIRED ON)  # 强制要求编译器支持C++17
set(CMAKE_CXX_EXTENSIONS OFF)  # 禁用编译器扩展，确保使用纯标准

add_definitions(#-D_AFXDLL


# curl  libsrtp  opus 
#-DHAVE_CONFIG_H
 -D_ITERATOR_DEBUG_LEVEL=0
-DRTC_ENABLE_WIN_WGC=1
-DWEBRTC_WIN=1
-D_CONSOLE
-D__STD_C
-D_CRT_RAND_S
-D_CRT_SECURE_NO_DEPRECATE
-D_SCL_SECURE_NO_DEPRECATE
-D_ATL_NO_OPENGL
-D_WINDOWS
-DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS
-DPSAPI_VERSION=2
-DWIN32
-D_SECURE_ATL
-DWINAPI_FAMILY=WINAPI_FAMILY_DESKTOP_APP
-DUSE_AURA=1
-DWIN32_LEAN_AND_MEAN
-DNOMINMAX
#-D_UNICODE
#-DUNICODE
-DNTDDI_VERSION=NTDDI_WIN11_GE
-D_WIN32_WINNT=0x0A00
-DWINVER=0x0A00
-DDYNAMIC_ANNOTATIONS_ENABLED=1
-DWEBRTC_ENABLE_PROTOBUF=1
-DWEBRTC_STRICT_FIELD_TRIALS=0
-DWEBRTC_INCLUDE_INTERNAL_AUDIO_DEVICE
-DRTC_ENABLE_VP9
-DRTC_ENABLE_H265
-DRTC_DAV1D_IN_INTERNAL_DECODER_FACTORY
-DWEBRTC_HAVE_SCTP
-DWEBRTC_USE_H264
-DWEBRTC_ENCODER_PSNR_STATS
-DPROTOBUF_ENABLE_DEBUG_LOGGING_MAY_LEAK_PII=0
-DWEBRTC_ENABLE_AVX2
-DRTC_ENABLE_WIN_WGC
-DWEBRTC_NON_STATIC_TRACE_EVENT_HANDLERS=1
-DWEBRTC_WIN
-DABSL_ALLOCATOR_NOTHROW=1
-DABSL_FLAGS_STRIP_NAMES=0
-DCHROMIUM
-DLIBYUV_DISABLE_NEON
-DLIBYUV_DISABLE_SVE
-DLIBYUV_DISABLE_SME
-DLIBYUV_DISABLE_LSX
-DLIBYUV_DISABLE_LASX
-DHAVE_WEBRTC_VIDEO
-D_HAS_NODISCARD
-D_CRT_NONSTDC_NO_WARNINGS
-D_WINSOCK_DEPRECATED_NO_WARNINGS

) 
 
 
 
 
include_directories(
	 D:/Work/webrtc_google/src
	 D:/Work/webrtc_google/src/third_party/libyuv/include
	 D:/Work/webrtc_google/src/third_party/abseil-cpp 
)
 
add_subdirectory(PoixsDesk)
add_subdirectory(libdevice)
add_subdirectory(libcommon)
add_subdirectory(Win)
add_subdirectory(Tools)

